; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_get_progid_datalen.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_get_progid_datalen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entity_array = type { i32, %struct.entity* }
%struct.entity = type { i64, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__, i64 }
%struct.TYPE_4__ = type { i32, i64* }

@ACTIVATION_CONTEXT_SECTION_COM_SERVER_REDIRECTION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.entity_array*, i32*, i32*)* @get_progid_datalen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_progid_datalen(%struct.entity_array* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.entity_array*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.entity*, align 8
  store %struct.entity_array* %0, %struct.entity_array** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 12, i32* %9, align 4
  store i32 0, i32* %7, align 4
  br label %11

11:                                               ; preds = %116, %3
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.entity_array*, %struct.entity_array** %4, align 8
  %14 = getelementptr inbounds %struct.entity_array, %struct.entity_array* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ult i32 %12, %15
  br i1 %16, label %17, label %119

17:                                               ; preds = %11
  %18 = load %struct.entity_array*, %struct.entity_array** %4, align 8
  %19 = getelementptr inbounds %struct.entity_array, %struct.entity_array* %18, i32 0, i32 1
  %20 = load %struct.entity*, %struct.entity** %19, align 8
  %21 = load i32, i32* %7, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds %struct.entity, %struct.entity* %20, i64 %22
  store %struct.entity* %23, %struct.entity** %10, align 8
  %24 = load %struct.entity*, %struct.entity** %10, align 8
  %25 = getelementptr inbounds %struct.entity, %struct.entity* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @ACTIVATION_CONTEXT_SECTION_COM_SERVER_REDIRECTION, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %115

29:                                               ; preds = %17
  %30 = load %struct.entity*, %struct.entity** %10, align 8
  %31 = getelementptr inbounds %struct.entity, %struct.entity* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %59

36:                                               ; preds = %29
  %37 = load i32, i32* %9, align 4
  %38 = zext i32 %37 to i64
  %39 = load %struct.entity*, %struct.entity** %10, align 8
  %40 = getelementptr inbounds %struct.entity, %struct.entity* %39, i32 0, i32 1
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @strlenW(i64 %43)
  %45 = add nsw i32 %44, 1
  %46 = sext i32 %45 to i64
  %47 = mul i64 %46, 4
  %48 = trunc i64 %47 to i32
  %49 = call i64 @aligned_string_len(i32 %48)
  %50 = add nsw i64 %38, %49
  %51 = load i32*, i32** %6, align 8
  %52 = load i32, i32* %51, align 4
  %53 = zext i32 %52 to i64
  %54 = add nsw i64 %53, %50
  %55 = trunc i64 %54 to i32
  store i32 %55, i32* %51, align 4
  %56 = load i32*, i32** %5, align 8
  %57 = load i32, i32* %56, align 4
  %58 = add i32 %57, 1
  store i32 %58, i32* %56, align 4
  br label %59

59:                                               ; preds = %36, %29
  store i32 0, i32* %8, align 4
  br label %60

60:                                               ; preds = %91, %59
  %61 = load i32, i32* %8, align 4
  %62 = load %struct.entity*, %struct.entity** %10, align 8
  %63 = getelementptr inbounds %struct.entity, %struct.entity* %62, i32 0, i32 1
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 0
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 0
  %66 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = icmp ult i32 %61, %67
  br i1 %68, label %69, label %94

69:                                               ; preds = %60
  %70 = load %struct.entity*, %struct.entity** %10, align 8
  %71 = getelementptr inbounds %struct.entity, %struct.entity* %70, i32 0, i32 1
  %72 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %71, i32 0, i32 0
  %73 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %72, i32 0, i32 0
  %74 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %73, i32 0, i32 1
  %75 = load i64*, i64** %74, align 8
  %76 = load i32, i32* %8, align 4
  %77 = zext i32 %76 to i64
  %78 = getelementptr inbounds i64, i64* %75, i64 %77
  %79 = load i64, i64* %78, align 8
  %80 = call i32 @strlenW(i64 %79)
  %81 = add nsw i32 %80, 1
  %82 = sext i32 %81 to i64
  %83 = mul i64 %82, 4
  %84 = trunc i64 %83 to i32
  %85 = call i64 @aligned_string_len(i32 %84)
  %86 = load i32*, i32** %6, align 8
  %87 = load i32, i32* %86, align 4
  %88 = zext i32 %87 to i64
  %89 = add nsw i64 %88, %85
  %90 = trunc i64 %89 to i32
  store i32 %90, i32* %86, align 4
  br label %91

91:                                               ; preds = %69
  %92 = load i32, i32* %8, align 4
  %93 = add i32 %92, 1
  store i32 %93, i32* %8, align 4
  br label %60

94:                                               ; preds = %60
  %95 = load i32, i32* %9, align 4
  %96 = load %struct.entity*, %struct.entity** %10, align 8
  %97 = getelementptr inbounds %struct.entity, %struct.entity* %96, i32 0, i32 1
  %98 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %97, i32 0, i32 0
  %99 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %98, i32 0, i32 0
  %100 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %99, i32 0, i32 0
  %101 = load i32, i32* %100, align 8
  %102 = mul i32 %95, %101
  %103 = load i32*, i32** %6, align 8
  %104 = load i32, i32* %103, align 4
  %105 = add i32 %104, %102
  store i32 %105, i32* %103, align 4
  %106 = load %struct.entity*, %struct.entity** %10, align 8
  %107 = getelementptr inbounds %struct.entity, %struct.entity* %106, i32 0, i32 1
  %108 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %107, i32 0, i32 0
  %109 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %108, i32 0, i32 0
  %110 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %109, i32 0, i32 0
  %111 = load i32, i32* %110, align 8
  %112 = load i32*, i32** %5, align 8
  %113 = load i32, i32* %112, align 4
  %114 = add i32 %113, %111
  store i32 %114, i32* %112, align 4
  br label %115

115:                                              ; preds = %94, %17
  br label %116

116:                                              ; preds = %115
  %117 = load i32, i32* %7, align 4
  %118 = add i32 %117, 1
  store i32 %118, i32* %7, align 4
  br label %11

119:                                              ; preds = %11
  ret void
}

declare dso_local i64 @aligned_string_len(i32) #1

declare dso_local i32 @strlenW(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
